# OpenRec

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  PERF.md  README.md
.github/workflows/: docker-image.yml  publish-docker.yml  rust.yml
analyser/: README.md
celerity/: Cargo.toml  README.md
celerity/src/: bin.rs  changeset.rs  convert.rs  error.rs  folders.rs  lib.rs  lua.rs  utils.rs
celerity/src/instructions/: merge_col.rs  mod.rs  project_col.rs
celerity/src/matching/: constraints.rs  group_iter.rs  matched.rs  mod.rs  unmatched.rs
celerity/src/model/: datafile.rs  grid.rs  grid_iter.rs  mod.rs  record.rs  schema.rs
celerity/tests/: changesets.rs  constraints.rs  examples.rs  lua.rs  metadata.rs  misc.rs
celerity/tests/common/: mod.rs
core/: Cargo.toml
core/src/: charter.rs  data_type.rs  error.rs  lib.rs  lua.rs
docker/: README.md  big_data.sh  docker-compose.yml  load_data1.sh  load_data2.sh  openrec  openrec.sh  random_data.sh  small_data.sh
docker/etc/: 01-Basic-Match.yaml  register.yml
docker/grafana/provisioning/dashboards/: OpenRecOverview.json
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
docs/: concepts.md  examples.md  file_format.md  files_paths.md  getting_started.md  overview.md  problems.md
examples/: 01-Basic-Match.yaml  02-Projected-Columns.yaml  03-Net-With-Tolerance.yaml  04-3-Way-Match.yaml  05-2-Stage-Match.yaml  06-Advanced-Lua-Scripts.yaml  06-Advanced-Scripts.yaml  06-Filtering.yaml  06-Filtering.yaml.delete.me  07-Unmatched-Data.yaml  08-Advanced-Lua-Scripts.yaml  09-3-Way-Performance.yaml  09-Changesets.yaml  10-Performance.yaml  11-Datetimes-In-Lua.yaml  11-Datetimes-With-Jetwash.yaml  11-Group-By-Dates.yaml  12-FXRate-Lookups.yaml  13-The-Kitchen-Sink.yaml  13-Unknown-Datatypes.yaml  14-The-Kitchen-Sink.yaml  2-stage.csv  2-stage.yaml  3-way-match.yaml  example_charter.yaml
examples/data/: 01-payments.csv  02-invoices.csv  02-payments.csv  03-invoices.csv  03-payments.csv  04-invoices.csv  04-payments.csv  04-receipts.csv  05-invoices.csv  05-payments.csv  06-filtering.csv  07-invoices.csv  07-payments-a.csv  07-payments-b.csv  08-invoices.csv  08-payments.csv  09-payments.csv  11-invoices.csv  11-payments.csv  12-payments.csv  2021-10-21_GBP_FXRates.csv  2021-10-22_GBP_FXRates.csv  2021-11-25_GBP_FXRates.csv  20211129_043300000_01-invoices.csv  20211129_043300000_01-payments.csv  20211129_043300000_02-invoices.csv  20211129_043300000_02-payments.csv  20211129_043300000_03-invoices.csv  20211129_043300000_03-payments.csv  20211129_043300000_04-invoices.csv  20211129_043300000_04-payments.csv  20211129_043300000_04-receipts.csv  20211129_043300000_05-2-stage.csv  20211129_043300000_06-filtering.csv  20211129_043300000_06-invoices.csv  20211129_043300000_07-invoices.csv  20211129_043300000_07-payments-a.csv  20211129_043300000_07-payments-b.csv  20211129_043300000_08-invoices.csv  20211129_043300000_08-payments.csv  (+2 more)
generator/: Cargo.toml  README.md
generator/src/: column.rs  data_type.rs  generator.rs  group.rs  main.rs  schema.rs
integration-tests/: Cargo.toml
integration-tests/tests/: changesets.rs  constraints.rs  examples.rs  metadata.rs  misc.rs  mod.rs
integration-tests/tests/common/: mod.rs
jetwash/: Cargo.toml  README.md
jetwash/src/: analyser.rs  bin.rs  error.rs  folders.rs  lib.rs  mapping.rs
matcher/: 20201122_164200000_matches_example.json  Cargo.toml  README.md  charter.json  charter.yaml  nuke.sh  reset.sh
matcher/src/: bin.rs  changeset.rs  charter.rs  convert.rs  data_accessor.rs  data_type.rs  datafile.rs  error.rs  folders.rs  grid.rs  itertest.rs  lib.rs  lua.rs  main.rs  matched.rs  record.rs  schema.rs  unmatched.rs  utils.rs
matcher/src/instructions/: constraints.rs  match_groups.rs  merge_col.rs  mod.rs  project_col.rs  source_data.rs
matcher/src/matching/: group_iter.rs  mod.rs  unmatched.rs
matcher/src/model/: charter.rs  data_accessor.rs  data_type.rs  datafile.rs  grid.rs  grid_iter.rs  mod.rs  record.rs  schema.rs
matcher/tests/: changesets.rs  common.rs  constraints.rs  examples.rs  integration.rs  integration_tests.rs  matcher_tests.rs  metadata.rs  misc.rs
matcher/tests/common/: mod.rs
steward/: Cargo.toml  README.md
steward/src/: bin.rs  display.rs  lib.rs  metrics.rs  register.rs  state.rs
