[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"
doctest = false

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rust_decimal = "1.17"
rlua = "0.18"
thiserror = "1.0"
humantime = "2.1"
ansi_term = "0.12"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"