[package]
name = "integration-tests"
version = "0.1.0"
edition = "2018"

# Disable cargo standard integration test structure. We don't want one test binary per .rs file.
autotests = false

[[test]]
name = "integration"
path = "tests/mod.rs"
harness = true

[dev-dependencies]
env_logger = "0.9.0"
dotenv = "0.15.0"
fs_extra = "1.2.0"
assert-json-diff = "2.0.1"
serde_json = "1.0.71"
itertools = "0.10.1"
jetwash = { path = "../jetwash" }
celerity = { path = "../celerity" }