[package]
name = "matcher"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0.30"
csv = "1.1.6"
uuid = { version = "0.8.2", features = ["v4"] }
regex = "1.5.4"
lazy_static = "1.4.0"
chrono = "0.4.19"
ubyte = "0.10.1"
rlua = "0.18.0"
ansi_term = "0.12"
rust_decimal = "1.17.0"

#rand = "0.8.4"
#clap = "2.33.3"
#derive_more = "0.99.16"
#humantime = "2.1.0"
#num-format = "0.4.0"

[dev-dependencies]