[package]
name = "matcher"
version = "0.1.0"
edition = "2018"

[lib]
name = "matcher"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "matcher"
path = "src/bin.rs"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0.30"
csv = "1.1.6"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
regex = "1.5.4"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
ubyte = "0.10.1"
rlua = "0.18.0"
ansi_term = "0.12"
rust_decimal = "1.17.0"
humantime = "2.1.0"
bytes = "1.1.0"
itertools = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
serde_yaml = "0.8.21"
clap = "2.33.3"

[dev-dependencies]
fs_extra = "1.2.0"
md5 = "0.7.0"
assert-json-diff = "2.0.1"