[package]
name = "steward"
version = "0.1.0"
edition = "2021"

# Disable cargo standard integration test structure. We don't want one test binary per .rs file.
autotests = false

[lib]
name = "steward"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "steward"
path = "src/bin.rs"
test = false

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0.30"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
parking_lot = "0.11.2"
termion = "1.5.6"
fs_extra = "1.2.0"
crossbeam = "0.8.1"
chrono = { version = "0.4.19", features = ["serde"] }

# TODO: Just for dev
rand = "0.8.4"